Разметка первых блоков

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-postcss": "^6.4.0",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
+    "gulp-svg2string": "^0.1.1",
     "gulp-svgmin": "^1.2.3",
     "gulp-svgstore": "^6.1.0",
     "gulp.spritesmith": "^6.4.0",
